--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "material-react-table": "^3.0.2",
     "next": "15.0.4",
     "prop-types": "^15.8.1",
+    "rc-progress": "^4.0.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-google-charts": "^5.2.1"
   },
